# cuda-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
kernels/: CMakeLists.txt  myKernel.cu  myKernel.cuh
